2002-12-04 Damien Sandras  <dsandras@seconix.com>

	* lib/stock-icons.c, lib/stock-icons.h: Added icon for the druid IXJ
	part.

	* pixmaps/druid_ixj.png: Added IXJ icon.

	* src/druid.cpp: Added a setup page to help to configure a microtelco
	account.

	* src/endpoint.cpp: Fixed bug.

	* src/gatekeeper.cpp: Removed unneeded stuff.

	* src/lid.cpp: Also permit to hangoff when the user is calling.

	
2002-12-03 Damien Sandras  <dsandras@seconix.com>

	* src/common.h: Added the druid.

	* src/druid.cpp: Use the druid above and update the pointer if the
	druid is destroyed.

	* src/main_window.cpp: ?

	* src/videograbber.cpp, src/videograbber.h: Make sure to only
	edit the druid if it still existing.
	
2002-12-03 Damien Sandras  <dsandras@seconix.com>

	* src/misc.cpp: Added missing slash to display the incoming call
	icon thanks to tfing on IRC.
	
2002-12-02 Damien Sandras  <dsandras@seconix.com>

	* src/lid.cpp: Fixed bug (GDK thread lock not taken).
	
2002-12-02 Damien Sandras  <dsandras@seconix.com>

	* src/lid.cpp, src/lid.h: Added those files corresponding to the 
	Quicknet monitoring thread. GnomeMeeting is now able to use a real
	phone and its dialpad to dial numbers (* = . in IP addresses).
	The phone should behave like a real phone (on hook, off hook,
	calling, ...).
	
	* src/Makefile.am: Added the 2 previous files.
	
	* src/config.cpp: Changes consecutive to the introduction of lid.*
	
	* src/endpoint.cpp: See above.
	
	* src/endpoint.h: See above.
	
	* src/gnomemeeting.cpp: See above.
	
	* src/main_window.cpp: See above.
	
	* src/toolbar.cpp: See above.

	
2002-12-02 Damien Sandras  <dsandras@seconix.com>

	* src/videograbber.cpp: Added video device to the error message.
	
2002-12-01 Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp: Added support for POTS keypad.

	* src/main_window.cpp, src/main_window.h: Added function to be 
	able to support POTS keypad.
	
2002-12-01 Damien Sandras  <dsandras@seconix.com>
