@@ -1,5 +1,17 @@
 2002-12-04 Damien Sandras  <dsandras@seconix.com>
 
+	* src/common.h: Applied patch from the PLD Team and from Artur Flinta.
+	Thanks !
+
+	* src/sound_handling.cpp: Applied patch from Jonny Strom.
+
+	* src/lid.cpp: Cleaned some code and added messages when the phone
+	is on hook/off hook.
+
+	* src/gnomemeeting.cpp: Removed unused code.
+	
+2002-12-04 Damien Sandras  <dsandras@seconix.com>
+
 	* lib/stock-icons.c, lib/stock-icons.h: Added icon for the druid IXJ
 	part.
 
